# dnspyjson

./: .gitattributes  .gitignore  .pylintrc  COPYING  MANIFEST.in  Makefile  README.md  all_tests.sh  pyboot  setup.cfg  setup.py
dnspyjson/: __init__.py  _version.py  app.py  encoder.py
etc/: .gitignore  pip.ini  pip.ini.prod
tests/: test.py
