[metadata]
description = Serialize dnspython2 Responses Into Standard JSON or Native Python Objects
maintainer = mzpqnxow
maintainer_email = copyright@mzpqnxow.com
author = Adam Greene
author_email = copyright@mzpqnxow.com
url = https://github.com/mzpqnxow/dnspyjson
name = dnspyjson
requires-python = >=3.5
license-file = COPYING
license = BSD-3-Clause

[versioneer]
parentdir_prefix = 
versionfile_source = dnspyjson/_version.py
versionfile_build = dnspyjson/_version.py
VCS = git
style = pep440
tag_prefix = 

[options]
# package_dir = = src
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.5
install_requires = 
    dnspython>=2

[options.entry_points]
console_scripts =
    json-resolve = dnspyjson.app:resolve_app

[pep8]
max-line-length = 140

[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true

[pycodestyle]
ignore = E501,W605

[flake8]
max-line-length = 140
doctests = False
exclude = .git, packages/ , __pycache__, tests/, docs/, build/, dist/, venv/, etc/

[clean]
all = 1

[pylint.]
ignore=.git,venv,packages,pybuild,Makefile,README.md,etc,_version.py
ingore-pattern=_version.py,versioneer.py
disable=consider-using-sys-exit
max-line-length=140

